--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</nav>
 					<a href="#popup-contact" class="fancybox"><strong class="phone">+1 (877) 629-2361</strong></a>
 				</div>
-				<a href="#popup-contact" class="fancybox"><strong class="phone">+1 (877) 629-2361</strong></a>
+				<strong class="logo"><a href="index.html">MaxCDN Enterprise</a></strong>
 			</div>
 		</header><!-- /header -->
 		<div class="block">
