added datacenter and peering partner images

--- a/index.html
+++ b/index.html
@@ -163,56 +163,16 @@
 						</script>
 					</div>
 					<ul class="logos logos-2">
-						<li><span class="tbl-cell"><img src="images/img-23.jpg" alt="image description" width="124" height="44" ></span></li>
-						<li><span class="tbl-cell"><img src="images/img-24.jpg" alt="image description" width="87" height="44" ></span></li>
-						<li><span class="tbl-cell"><img src="images/img-25.jpg" alt="image description" width="61" height="44" ></span></li>
-						<li><span class="tbl-cell"><img src="images/img-26.jpg" alt="image description" width="121" height="44" ></span></li>
+						<li>
+							<img src="images/datacenter-partners.png">
+						</li>
 					</ul>
 				</div>
 				<div class="tab-content" id="tab-1-2">
 					<div class="img"><img src="images/img-07.jpg" alt="image description" width="687" height="242" ></div>
 					<ul class="logos">
 						<li>
-							<span class="tbl-cell"><img src="images/img-09.jpg" alt="image description" width="69" height="33" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-10.png" alt="image description" width="75" height="21" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-11.jpg" alt="image description" width="54" height="25" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-12.jpg" alt="image description" width="73" height="23" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-13.png" alt="image description" width="72" height="29" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-14.jpg" alt="image description" width="70" height="30" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-15.jpg" alt="image description" width="62" height="45" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-16.jpg" alt="image description" width="79" height="16" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-17.jpg" alt="image description" width="73" height="23" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-18.jpg" alt="image description" width="53" height="33" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-19.jpg" alt="image description" width="73" height="21" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-20.jpg" alt="image description" width="74" height="20" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-21.png" alt="image description" width="76" height="18" ></span>
-						</li>
-						<li>
-							<span class="tbl-cell"><img src="images/img-22.jpg" alt="image description" width="74" height="18" ></span>
+							<img src="images/peering-partners.png">
 						</li>
 					</ul>
 				</div>
