kissmetrics, ga, and other form fixes

--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,30 @@
 		<script type="text/javascript" src="js/PIE.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/ie.css" media="all">
 	<![endif]-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-11020602-7', 'maxcdn.com');
+  ga('send', 'pageview');
+</script>
+
+<script type="text/javascript">var _kmq = _kmq || [];
+	  var _kmk = _kmk || '8521c9125b22f8dc648d1abbb95e84667d89841e';
+	  function _kms(u){
+	    setTimeout(function(){
+	      var d = document, f = d.getElementsByTagName('script')[0],
+	      s = d.createElement('script');
+	      s.type = 'text/javascript'; s.async = true; s.src = u;
+	      f.parentNode.insertBefore(s, f);
+	    }, 1);
+	  }
+	  _kms('//i.kissmetrics.com/i.js');
+	  _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+</script>
 </head>
+
 <body>
 	<div class="top-area">
 		<header id="header">
@@ -87,7 +110,9 @@
 			<form action="#">
 				<h2 class="orange">Meet Ameer</h2>
 				<label for="lbl-002">Ameer is a senior account executive at MaxCDN. He’ll help you find out if MaxCDN Enterprise is a good fit for your company.</label>
-				<div class="textarea"><textarea id="lbl-002" cols="30" rows="10" style="resize:none;"></textarea></div>
+				<input type="text" placeholder="Your E-mail" />
+				<div class="clearfix"></div>
+				<div class="textarea"><textarea id="lbl-002" cols="30" rows="10" style="resize:none;" placeholder="Your Message"></textarea></div>
 				<div class="btn-holder">
 					<button class="btn" type="submit">Ask Ameer your question</button>
 				</div>
