--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 		<script type="text/javascript" src="js/PIE.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/ie.css" media="all">
 	<![endif]-->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-11020602-7', 'maxcdn.com');
+  ga('send', 'pageview');
+</script>
+
+<script type="text/javascript">var _kmq = _kmq || [];
+	  var _kmk = _kmk || '8521c9125b22f8dc648d1abbb95e84667d89841e';
+	  function _kms(u){
+	    setTimeout(function(){
+	      var d = document, f = d.getElementsByTagName('script')[0],
+	      s = d.createElement('script');
+	      s.type = 'text/javascript'; s.async = true; s.src = u;
+	      f.parentNode.insertBefore(s, f);
+	    }, 1);
+	  }
+	  _kms('//i.kissmetrics.com/i.js');
+	  _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+</script>
 </head>
+
 <body>
 	<div class="top-area">
 		<header id="header">
@@ -163,16 +187,56 @@
 						</script>
 					</div>
 					<ul class="logos logos-2">
-						<li>
-							<img src="images/datacenter-partners.png">
-						</li>
+						<li><span class="tbl-cell"><img src="images/img-23.jpg" alt="image description" width="124" height="44" ></span></li>
+						<li><span class="tbl-cell"><img src="images/img-24.jpg" alt="image description" width="87" height="44" ></span></li>
+						<li><span class="tbl-cell"><img src="images/img-25.jpg" alt="image description" width="61" height="44" ></span></li>
+						<li><span class="tbl-cell"><img src="images/img-26.jpg" alt="image description" width="121" height="44" ></span></li>
 					</ul>
 				</div>
 				<div class="tab-content" id="tab-1-2">
 					<div class="img"><img src="images/img-07.jpg" alt="image description" width="687" height="242" ></div>
 					<ul class="logos">
 						<li>
-							<img src="images/peering-partners.png">
+							<span class="tbl-cell"><img src="images/img-09.jpg" alt="image description" width="69" height="33" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-10.png" alt="image description" width="75" height="21" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-11.jpg" alt="image description" width="54" height="25" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-12.jpg" alt="image description" width="73" height="23" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-13.png" alt="image description" width="72" height="29" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-14.jpg" alt="image description" width="70" height="30" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-15.jpg" alt="image description" width="62" height="45" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-16.jpg" alt="image description" width="79" height="16" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-17.jpg" alt="image description" width="73" height="23" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-18.jpg" alt="image description" width="53" height="33" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-19.jpg" alt="image description" width="73" height="21" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-20.jpg" alt="image description" width="74" height="20" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-21.png" alt="image description" width="76" height="18" ></span>
+						</li>
+						<li>
+							<span class="tbl-cell"><img src="images/img-22.jpg" alt="image description" width="74" height="18" ></span>
 						</li>
 					</ul>
 				</div>
