making phone number on pricing linkable

--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
 							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
 						</ul>
 					</nav>
-					<strong class="phone">+1 (877) 629-2361</strong>
+					<a href="#popup-contact" class="fancybox"><strong class="phone">+1 (877) 629-2361</strong></a>
 				</div>
 				<strong class="logo"><a href="index.html">MaxCDN Enterprise</a></strong>
 			</div>
