--- a/pricing.html
+++ b/pricing.html
@@ -44,7 +44,7 @@
 						<ul>
 							<li><a href="index.html">HOME</a></li>
 							<li class="active"><a href="pricing.html">PRICING</a></li>
-							<li><a href="pricing.html#calc">CALCULATOR</a></li>
+							<li><a href="#calc">CALCULATOR</a></li>
 							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
 						</ul>
 					</nav>
