--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 		<div class="main-holder">
 			<article class="content">
 				<h1 class="heading">The Speed and Features You Need</h1>
-				<p>We are one of the fastest CDNs in the industry, but speed is nothing without control. We offer on-demand purging (cache invalidation) and provisioning, a fully documented and supported API and a robust suite of security features. We stand behind our CDN with 24/7/365 support at a competitive price.</p>
+				<p>We are one of the fastest CDNs in the industry, but speed is nothing without control.<br/>We offer on-demand purging (cache invalidation) and provisioning, a fully documented and supported API and a robust suite of security features. We stand behind our CDN with<br/>24/7/365 support at a competitive price.</p>
 				<strong class="large-heading orange">Reliability</strong>
 				<h2 class="heading">100% SLA</h2>
 				<p>Our redundant infrastructure and network are so reliable, we provide a 100% SLA to every enterprise client — for example, we use multiple upstream and DNS providers.</p>
 				<h2 class="heading">Low Error Rates</h2>
-				<p>We make sure your content is delivered using an Anycast network with Dyn and DNS Made Easy that minimizes packet loss. Packet loss means a slower connection. Slower connections means lost conversions and unhappy customers and users. Our error rates are among the lowest in the industry, according to Cedexis.</p>
+				<p>We make sure your content is delivered using an Anycast network with Dyn and DNS Made Easy<br/>that minimizes packet loss. Packet loss means a slower connection. Slower connections means lost conversions and unhappy customers and users. Our error rates are among the lowest in the industry, according to Cedexis.</p>
 			</article>
 			<aside id="sidebar">
 				<ul class="side-menu">
@@ -160,7 +160,8 @@
 		<article class="content">
 			<div class="perfomance-info" id="performance">
 				<h2 class="orange large-heading">Performance</h2>
-				<p>Our servers feature Nginx — known for its high performance, stability, rich feature set, simple configuration, and low resource consumption — and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports. Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis — but don’t take our word for it. Use your own tools to test our speed. We know you’ll be pleasantly surprised.</p>
+				<p>Our servers feature Nginx — known for its high performance, stability, rich feature set, simple configuration, and low resource consumption — and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports.</p>
+				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis — but don’t take our word for it. Use your own tools to test our speed. We know you’ll be pleasantly surprised.</p>
 			</div><!-- /perfomance-info -->
 			<div class="tab-area" id="tabs-1">
 				<ul class="tabset">
