fixing jumping issue on map and copy

--- a/pricing.html
+++ b/pricing.html
@@ -104,7 +104,7 @@
 	</div><!-- /top-area -->
 	<article class="info">
 		<h2 class="heading">600 peering partners in 90 countries</h2>
-		<p>POPs in North America, Europe and Asia. Six hundred peering partners in 90 countries, including AT&T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others, as well as redundant backbones with GTT and Zayo. SSD-equipped servers with multiple 10 Gigabit connections.</p>
+		<p>POPs in North America, Europe and Asia. Six hundred peering partners in 90 countries,<br/>including AT&T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers,<br/>among many others, as well as redundant backbones with GTT and Zayo.<br/>SSD-equipped servers with multiple 10 Gigabit connections.</p>
 		<p>Our price? Just one, no matter where in the world. We charge based on bandwidth. We don’t charge for requests. We also don't charge additional fees for SSL traffic.</p>
 		<div class="ask-form">
 			<form action="#">
