added some humor to index and pricing

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 	</div><!-- /team-area -->
 	<div class="support-info">
 		<div class="main">
+			<section class="content small">Not Models, Actual Team Members.</section>
 			<article class="content" id="support">
 				<strong class="large-heading orange">Support</strong>
 				<h2 class="heading">Engineer Access</h2>
