success page, phone number replace for international users, and some other fixes regarding the forms

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 				<div class="alignright">
 					<nav>
 						<ul>
-							<li class="active"><a href="#">HOME</a></li>
+							<li class="active"><a href="index.html">HOME</a></li>
 							<li><a href="pricing.html">PRICING</a></li>
 							<li><a href="pricing.html#calc">CALCULATOR</a></li>
 							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
 						</ul>
 					</nav>
-					<a href="#popup-contact" class="fancybox"><strong class="phone">+1 (877) 629-2361</strong></a>
+					<a href="#popup-contact" class="fancybox"><strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong></a>
 				</div>
 				<strong class="logo"><a href="index.html">MaxCDN Enterprise</a></strong>
 			</div>
@@ -419,7 +419,7 @@
 			<div class="col col-3">
 				<div class="box">
 					<a href="#" class="btn" onclick="return startWidget('chat');">CHAT NOW</a>
-					<strong class="phone">+1 (877) 629-2361</strong>
+					<strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong>
 					<span class="str orange">Supercharge your site</span>
 					<ul class="socials">
 						<li><a href="#" class="ico">twitter</a></li>
@@ -439,16 +439,18 @@
 				<div class="cols">
 					<div class="col">
 						<div class="trial-form custom-form">
-							<label for="lbl-11">Your Name</label>
+							<label for="lbl-11">First Name</label>
 							<input class="text" type="text" id="lbl-11" >
-							<label for="lbl-12">Email Address</label>
+							<label for="lbl-12">Last Name</label>
 							<input class="text" type="text" id="lbl-12" >
-							<label for="lbl-13">Phone Number</label>
+							<label for="lbl-13">Email Address</label>
 							<input class="text" type="text" id="lbl-13" >
-							<label for="lbl-14">URL</label>
-							<input class="text" type="text" id="lbl-14" value="http://" >
-							<label for="lbl-15">Your Monthly Bandwidth Usage</label>
-							<select id="lbl-15" title="Select your monthly bandwidth usage">
+							<label for="lbl-14">Phone Number</label>
+							<input class="text" type="text" id="lbl-14" >
+							<label for="lbl-15">URL</label>
+							<input class="text" type="text" id="lbl-15" value="http://" >
+							<label for="lbl-16">Your Monthly Bandwidth Usage</label>
+							<select id="lbl-16" title="Select your monthly bandwidth usage">
 								<option>option 1</option>
 								<option>option 2</option>
 								<option>option 3</option>
