--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
 							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
 						</ul>
 					</nav>
-					<a href="#popup-contact" class="fancybox"><strong class="phone">+1 (877) 629-2361</strong></a>
+					<a href="#popup-contact" class="fancybox"><strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong></a>
 				</div>
 				<strong class="logo"><a href="index.html">MaxCDN Enterprise</a></strong>
 			</div>
@@ -179,18 +179,20 @@
 						<h3 class="heading">Shall we make this official?</h3>
 						<div class="container">
 							<div class="col">
-								<label for="lbl-101">Your Name</label>
+								<label for="lbl-101">First Name</label>
 								<input class="text" type="text" id="lbl-101" >
-								<label for="lbl-102">Email Address</label>
+								<label for="lbl-102">Last Name</label>
 								<input class="text" type="text" id="lbl-102" >
-								<label for="lbl-103">Phone Number</label>
+								<label for="lbl-103">Email Address</label>
 								<input class="text" type="text" id="lbl-103" >
-								<label for="lbl-104">URL</label>
-								<input class="text" type="text" id="lbl-104" value="http://" >
+								<label for="lbl-104">Phone Number</label>
+								<input class="text" type="text" id="lbl-104" >
+								<label for="lbl-105">URL</label>
+								<input class="text" type="text" id="lbl-105" value="http://" >
 							</div>
 							<div class="col">
-								<label for="lbl-105">Message</label>
-								<textarea id="lbl-105" cols="30" rows="10" style="resize:none;"></textarea>
+								<label for="lbl-106">Message</label>
+								<textarea id="lbl-106" cols="30" rows="10" style="resize:none;"></textarea>
 								<button class="btn btn-submit" type="submit">Contact Us</button>
 							</div>
 						</div>
@@ -209,16 +211,18 @@
 			<div class="col">
 				<div class="trial-form custom-form">
 					<form action="#">
-						<label for="lbl-01">Your Name</label>
+						<label for="lbl-01">First Name</label>
 						<input class="text" type="text" id="lbl-01" >
-						<label for="lbl-02">Email Address</label>
+						<label for="lbl-02">Last Name</label>
 						<input class="text" type="text" id="lbl-02" >
-						<label for="lbl-03">Phone Number</label>
+						<label for="lbl-03">Email Address</label>
 						<input class="text" type="text" id="lbl-03" >
-						<label for="lbl-04">URL</label>
-						<input class="text" type="text" id="lbl-04" value="http://" >
-						<label for="lbl-05">Your Monthly Bandwidth Usage</label>
-						<select id="lbl-05" title="Select your monthly bandwidth usage">
+						<label for="lbl-04">Phone Number</label>
+						<input class="text" type="text" id="lbl-04" >
+						<label for="lbl-05">URL</label>
+						<input class="text" type="text" id="lbl-05" value="http://" >
+						<label for="lbl-06">Your Monthly Bandwidth Usage</label>
+						<select id="lbl-06" title="Select your monthly bandwidth usage">
 							<option>option 1</option>
 							<option>option 2</option>
 							<option>option 3</option>
@@ -336,7 +340,7 @@
 			<div class="col col-3">
 				<div class="box">
 					<a href="#" class="btn" onclick="return startWidget('chat');">CHAT NOW</a>
-					<strong class="phone">+1 (877) 629-2361</strong>
+					<strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong>
 					<span class="str orange">Supercharge your site</span>
 					<ul class="socials">
 						<li><a href="#" class="ico">twitter</a></li>
@@ -355,16 +359,18 @@
 				<div class="cols">
 					<div class="col">
 						<div class="trial-form custom-form">
-							<label for="lbl-11">Your Name</label>
+							<label for="lbl-11">First Name</label>
 							<input class="text" type="text" id="lbl-11" >
-							<label for="lbl-12">Email Address</label>
+							<label for="lbl-12">Last Name</label>
 							<input class="text" type="text" id="lbl-12" >
-							<label for="lbl-13">Phone Number</label>
+							<label for="lbl-13">Email Address</label>
 							<input class="text" type="text" id="lbl-13" >
-							<label for="lbl-14">URL</label>
-							<input class="text" type="text" id="lbl-14" value="http://" >
-							<label for="lbl-15">Your Monthly Bandwidth Usage</label>
-							<select id="lbl-15" title="Select your monthly bandwidth usage">
+							<label for="lbl-14">Phone Number</label>
+							<input class="text" type="text" id="lbl-14" >
+							<label for="lbl-15">URL</label>
+							<input class="text" type="text" id="lbl-15" value="http://" >
+							<label for="lbl-16">Your Monthly Bandwidth Usage</label>
+							<select id="lbl-16" title="Select your monthly bandwidth usage">
 								<option>option 1</option>
 								<option>option 2</option>
 								<option>option 3</option>
